@@ -4,6 +4,7 @@ releases are sorted from youngest to oldest.
 version <next>:
 - deflicker video filter
 - doubleweave video filter
+- lumakey video filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
